# miniProject_N1

./: CMakeLists.txt  main.cpp
header/: accessory.h  accessorymanager.h  amp.h  ampmanager.h  cable.h  cablemanager.h  client.h  clientmanager.h  effect.h  effectmanager.h  genrestarterset.h  guitar.h  guitarmanager.h  order.h  ordermanager.h  powersupply.h  powersupplymanager.h  productmanager.h  subproduct.h  tuner.h  tunermanager.h
source/: accessory.cpp  accessorymanager.cpp  amp.cpp  ampmanager.cpp  cable.cpp  cablemanager.cpp  client.cpp  clientmanager.cpp  effect.cpp  effectmanager.cpp  genrestarterset.cpp  guitar.cpp  guitarmanager.cpp  order.cpp  ordermanager.cpp  powersupply.cpp  powersupplymanager.cpp  productmanager.cpp  subproduct.cpp  tuner.cpp  tunermanager.cpp
